<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/black">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:paddingTop="7dp"
        android:paddingEnd="5dp"
        android:src="@drawable/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/imageHomeButtonEdit"/>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="660dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileWelcomeText"
        app:layout_constraintVertical_bias="1.0" />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="293dp"
        android:paddingLeft="10dp"
        android:layout_height="57dp"
        android:background="@drawable/shape"
        android:hint="Email Address"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"></EditText>

    <EditText
        android:id="@+id/editPhone"
        android:paddingLeft="10dp"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:background="@drawable/shape"
        android:hint="Phone Number (Optional)"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <TextView
        android:id="@+id/editProfileWelcomeText"
        android:layout_width="141dp"
        android:layout_height="34dp"
        android:layout_marginTop="28dp"
        android:text="Profile Editing"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:enabled="false"
        android:paddingLeft="10dp"
        android:id="@+id/editUsername"
        android:layout_width="291dp"
        android:layout_height="55dp"
        android:background="@drawable/shape"
        android:hint="Existing Username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214"></EditText>

    <Button
        android:id="@+id/editProfileSaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:onClick="saveAccountOnClick"
        android:text="SAVE"
        android:backgroundTint="#e25822"
        app:layout_constraintStart_toStartOf="@+id/editPhone"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />
</androidx.constraintlayout.widget.ConstraintLayout>