...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfileActivity"
    android:background="#f8eee3"
    android:padding="10dp"
    android:id="@+id/viewProfileActivity"
   >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/qrCodeRecyclerView"
        android:layout_width="386dp"
...
        app:layout_constraintVertical_bias="0.511"
        tools:listitem="@layout/qr_code_recycler_view_layout"
        >
    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/buttonEditProfile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
