...
        android:textColor="#CC1F1F"
        android:textSize="19dp"

        />-->

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLeaderB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="#D8E2DC"
        app:cardCornerRadius="10dp"
...
                android:hint="Search for Player"
                android:paddingTop="15dp" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_below="@+id/cardViewSearch"
        android:paddingTop="15dp" />


...
